--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.18",
-    "@types/bcrypt": "^5.0.2"
+    "@types/node": "^22.15.18"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ts-node-dev": "^2.0.0",
