--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meli-twitter-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "David Vargas",
   "license": "MIT",
   "scripts": {
