--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn ./index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "ts-node index.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
